# heartseg

./: .gitignore  pyproject.toml
Input/: metadata.json
Input/Series11/: 01.dic  02.dic  03.dic  04.dic  05.dic  06.dic  07.dic  08.dic  09.dic  10.dic  11.dic
Input/Series8/: 01.dic  02.dic  03.dic  04.dic  05.dic  06.dic  07.dic  08.dic  09.dic  10.dic  11.dic  12.dic  13.dic  14.dic  15.dic  16.dic  17.dic
Output/Series11/: Pasted_Images_202.json  Spine_Segmentation_1202.json
heartseg/: __init__.py  dcm2nifti2.py  inference.py  init_inference.py  inspect_labels.py  nifti2dcmseg.py
heartseg/utils/: cpdir.py  dcm2nifti.py  general-nifti2dcmseg.py  nifti2dcmseg2.py  predict_nnunet.py  preprocess.py  utils.py
